deployment/portfolio-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-ns
  labels:
    name: portfolio-ns
