deployment/portfolio-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: portfolio-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: busybox
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio-ns
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
